--- a/pages/gallery_adv.html
+++ b/pages/gallery_adv.html
@@ -13,7 +13,7 @@
             <a href="/index.html">
                 <h1 class="roboto">Stuffy<span class="orange-color segoe">.</span></h1>
             </a>
-            <a href="/pages/contact.html"><h3>Contact us</h3></a>
+            <a href="/pages/contact.html"><h3 class="contact-us">Contact us</h3></a>
         </header>
     </div>
 </body>
