--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,8 +33,8 @@
                     </div>
                     <div class="person-info">
                         <h3>Turin (Italy)</h3>
-                        <h3>+39 338 7654 525</h3>
-                        <h3>giorgio@stuffy.design</h3>
+                        <a href="tel:+393387654525"><h3>+39 338 7654 525</h3></a>
+                        <a href="mailto:giorgio@stuffy.design"><h3>giorgio@stuffy.design</h3></a>
                     </div>
                 </div>
                 <div class="right-person">
