Remove Trash. DrakesWeb

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
                 <h1 class="roboto">Stuffy<span class="segoe orange-color">.</span></h1>
             </a>
         </header>
-        <div class="left-circle circle"></div>
+        <div class="left-circle circle border-no"><img src="/src/person_orange.png" class="circle-person"></div>
         <div class="content">
             <div class="email-container">
                 <h2>hello@stuffy<span class="orange-color segoe">.</span>design</h2>
