--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stuffy</title>
-    <link rel="stylesheet" href="/styles/main.css">
     <link rel="shortcut icon" href="/src/logo.png" type="image/x-icon">
+    <link rel="preload" href="/styles/main.css">
+    <link rel="prefetch" href="/src/left-img.png">
+    <link rel="prefetch" href="/src/right-img.png">
 </head>
 <body>
     <div class="all">
@@ -40,7 +42,7 @@
             <a href="/pages/contact.html" class="contact-us"><h3>Contact us</h3></a>
             <div class="screen-container__top">
                 <div class="screen-container__center__texts">
-                    <h1 class="staff-text roboto">Stuffy<span class="segoe">.</span></h1>
+                    <h1 class="staff-text roboto">Stuffy<span class="segoe orange-color">.</span></h1>
                     <h3>Make your next event stand out.<br>Design it with us.</h3>
                 </div>
             </div>
