--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stuffy</title>
     <link rel="shortcut icon" href="/src/logo.png" type="image/x-icon">
-    <link rel="preload" href="/styles/main.css">
-    <link rel="prefetch" href="/src/left-img.png">
-    <link rel="prefetch" href="/src/right-img.png">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <div class="all">
