--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <div class="all">
+    <div class="main">
         <div class="screen">
             <div class="screen-container">
                 <a href="/pages/gallery_animation.html" class="screen-container__left text-parts">
@@ -37,8 +37,8 @@
     </div>
     <div class="screen-mobile">
         <div class="screen-container__mobile">
-            <a href="/pages/contact.html" class="contact-us"><h3>Contact us</h3></a>
             <div class="screen-container__top">
+                <a href="/pages/contact.html" class="contact-us"><h3>Contact us</h3></a>
                 <div class="screen-container__center__texts">
                     <h1 class="staff-text roboto">Stuffy<span class="segoe orange-color">.</span></h1>
                     <h3>Make your next event stand out.<br>Design it with us.</h3>
