--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stuffy</title>
-    <link rel="shortcut icon" href="/src/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -28,10 +28,10 @@
         </div>
         <div class="screen-background">
             <div class="left-img__container">
-                <img class="left-img" src="/src/left-img.png" alt="">
+                <img class="left-img" src="/src/left-img.webp" alt="">
             </div>
             <div class="right-img__container">
-                <img class="right-img" src="/src/right-img.png" alt="">
+                <img class="right-img" src="/src/right-img.webp" alt="">
             </div>
         </div>
     </div>
