--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stuffy | Contact</title>
     <link rel="stylesheet" href="/styles/main.css">
-    <link rel="shortcut icon" href="/src/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/logo.ico" type="image/x-icon">
 </head>
 <body>
     <div class="screen contacts-screen">
@@ -14,7 +14,7 @@
                 <h1 class="roboto">Stuffy<span class="segoe orange-color">.</span></h1>
             </a>
         </header>
-        <div class="left-circle circle border-no"><img src="/src/person_orange.png" class="circle-person"></div>
+        <div class="left-circle circle border-no"><img src="/src/person_orange.webp" class="circle-person"></div>
         <div class="content">
             <div class="email-container">
                 <h2>hello@stuffy<span class="orange-color segoe">.</span>design</h2>
