--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Stuffy</title>
     <link rel="shortcut icon" href="/src/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles/main.css">
+
+    <!-- Meta.. A lot of meta! -->
+    <meta name="robots" content="all,noimageindex"/>
+    <meta name="author" content="Stuffy Design"/>
+    <meta name="copyright" content="Stuffy Design"/>
+    <meta name="theme-color" content="#2b2d31"/>
+    <meta name="color-scheme" content="dark"/>
+    <meta name="description" content="Stuffy Design is a design studio based in Turin, Italy. We are a team of designers, artists and developers who are passionate about creating beautiful and functional websites. We are here to help you create your dream website.">
+    <meta name="keywords" content="design,stuffy,desing,website,beauteful,дизайн,стуффи,дизайн-студия,сайт,красивый">
+    <meta property="og:title" content="Stuffy Design - Beautiful and Functional Design">
+    <meta property="og:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional websites to help you stand out.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stuffy.design/">
+    <meta property="og:image" content="https://stuffy-theta.vercel.app/src/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Stuffy Design">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="ru_RU">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@stuffydesign">
+    <meta name="twitter:creator" content="@stuffydesign">
+    <meta name="twitter:title" content="Stuffy Design - Beautiful and Functional Websites">
+    <meta name="twitter:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional websites to help you stand out.">
+    <meta name="twitter:image" content="https://stuffy-theta.vercel.app/src/twitter-image.png">
+    <!-- Meta.. A lot of meta! -->
 </head>
 <body>
     <div class="main">
