Experemental meta update. DrakesWeb

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta name="copyright" content="Stuffy Design"/>
     <meta name="theme-color" content="#2b2d31"/>
     <meta name="color-scheme" content="dark"/>
-    <meta name="description" content="Stuffy Design is a design studio based in Turin, Italy. We are a team of designers, artists and developers who are passionate about creating beautiful and functional websites. We are here to help you create your dream website.">
+    <meta name="description" content="Stuffy Design is a design studio based in Turin, Italy. We are a team of designers, artists and developers who are passionate about creating beautiful and functional designs. We are here to help you create your dream design.">
     <meta name="keywords" content="design,stuffy,desing,website,beauteful,дизайн,стуффи,дизайн-студия,сайт,красивый">
     <meta property="og:title" content="Stuffy Design - Beautiful and Functional Design">
-    <meta property="og:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional websites to help you stand out.">
+    <meta property="og:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional designs to help you stand out.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://stuffy.design/">
     <meta property="og:image" content="https://stuffy-theta.vercel.app/src/og-image.png">
@@ -28,8 +28,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@stuffydesign">
     <meta name="twitter:creator" content="@stuffydesign">
-    <meta name="twitter:title" content="Stuffy Design - Beautiful and Functional Websites">
-    <meta name="twitter:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional websites to help you stand out.">
+    <meta name="twitter:title" content="Stuffy Design - Beautiful and Functional Designs">
+    <meta name="twitter:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional designs to help you stand out.">
     <meta name="twitter:image" content="https://stuffy-theta.vercel.app/src/twitter-image.png">
     <!-- Meta.. A lot of meta! -->
 </head>
