Images gobal update. DrakesWeb

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#2b2d31"/>
     <meta name="color-scheme" content="dark"/>
     <meta name="description" content="Stuffy Design is a design studio based in Turin, Italy. We are a team of designers, artists and developers who are passionate about creating beautiful and functional designs. We are here to help you create your dream design.">
-    <meta name="keywords" content="design,stuffy,desing,website,beauteful,дизайн,стуффи,дизайн-студия,сайт,красивый">
+    <meta name="keywords" content="design,stuffy,desing,website,beauteful,дизайн,стуффи,дизайн-студия">
     <meta property="og:title" content="Stuffy Design - Beautiful and Functional Design">
     <meta property="og:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional designs to help you stand out.">
     <meta property="og:type" content="website">
@@ -37,8 +37,11 @@
     <div class="main">
         <div class="screen">
             <div class="screen-container">
-                <a href="/pages/gallery_animation.html" class="screen-container__left text-parts">
-                    <h1 class="uppercase white-stroke left-text">Animation</h1>
+                <a href="/pages/gallery_animation.html" class="screen-container__left">
+                    <img class="left-img" src="/src/left-img.webp" alt="Left img" height="100%">
+                    <div class="text-parts">
+                        <h1 class="uppercase white-stroke left-text">Animation</h1>
+                    </div>
                 </a>
                 <div class="screen-container__center">
                     <a href="/pages/contact.html"><h3 class="contact-us">Contact us</h3></a>
@@ -47,17 +50,12 @@
                         <h3>Make your next event stand out.<br>Design it with us.</h3>
                     </div>
                </div>
-                <a href="/pages/gallery_adv.html" class="screen-container__right text-parts">
-                    <h1 class="uppercase white-stroke right-text">Adv <span class="orange-stroke">/</span> Identity</h1>
+                <a href="/pages/gallery_adv.html" class="screen-container__right">
+                    <img class="right-img" src="/src/right-img.webp" alt="Right img" height="100%">
+                    <div class="text-parts">
+                        <h1 class="uppercase white-stroke right-text">Adv <span class="orange-stroke">/</span> Identity</h1>
+                    </div>
                 </a>
-            </div>
-        </div>
-        <div class="screen-background">
-            <div class="left-img__container">
-                <img class="left-img" src="/src/left-img.webp" alt="">
-            </div>
-            <div class="right-img__container">
-                <img class="right-img" src="/src/right-img.webp" alt="">
             </div>
         </div>
     </div>
