ADV/Identity -> Stills, Fix background color

--- a/pages/gallery_stills.html
+++ b/pages/gallery_stills.html
@@ -1,9 +1,10 @@
+<!-- Created by DrakesWeb to Stuffy -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stuffy | ADV / identity</title>
+    <title>Stuffy | Stills</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="shortcut icon" href="/src/logo.ico" type="image/x-icon">
 </head>
