--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Created by DrakesWeb to Stuffy -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,10 +51,10 @@
                         <h3>Make your next event stand out.<br>Design it with us.</h3>
                     </div>
                </div>
-                <a href="/pages/gallery_adv.html" class="screen-container__right">
+                <a href="/pages/gallery_stills.html" class="screen-container__right">
                     <img class="right-img" src="/src/right-img.webp" alt="Right img" height="100%">
                     <div class="text-parts">
-                        <h1 class="uppercase white-stroke right-text">Adv <span class="orange-stroke">/</span> Identity</h1>
+                        <h1 class="uppercase white-stroke right-text">Stills</h1>
                     </div>
                 </a>
             </div>
@@ -72,8 +73,8 @@
                 <a href="/pages/gallery_animation.html" class="block animate">
                     <h1 class="uppercase">Animation</h1>
                 </a>
-                <a href="/pages/gallery_adv.html" class="block adv">
-                    <h1 class="uppercase">Adv <span class="orange-color">/</span> Identity</h1>
+                <a href="/pages/gallery_stills.html" class="block stills">
+                    <h1 class="uppercase">Stills</h1>
                 </a>
             </div>
         </div>
