Fix Metadata. Images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional designs to help you stand out.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://stuffy.design/">
-    <meta property="og:image" content="https://stuffy-theta.vercel.app/src/og-image.png">
+    <meta property="og:image" content="https://stuffy-theta.vercel.app/src/og-image.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Stuffy Design">
@@ -31,7 +31,7 @@
     <meta name="twitter:creator" content="@stuffydesign">
     <meta name="twitter:title" content="Stuffy Design - Beautiful and Functional Designs">
     <meta name="twitter:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional designs to help you stand out.">
-    <meta name="twitter:image" content="https://stuffy-theta.vercel.app/src/twitter-image.png">
+    <meta name="twitter:image" content="https://stuffy-theta.vercel.app/src/twitter-image.webp">
     <!-- Meta.. A lot of meta! -->
 </head>
 <body>
