--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Stuffy Design is a design studio based in Turin, Italy. We create beautiful and functional designs to help you stand out.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://stuffy.design/">
-    <meta property="og:image" content="https://stuffy-theta.vercel.app/src/og-image.webp">
+    <meta property="og:image" content="https://stuffy-theta.vercel.app/src/twitter-image.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Stuffy Design">
