Fix header bug. Preview galleryes (Super Alpha version)

--- a/pages/gallery_stills.html
+++ b/pages/gallery_stills.html
@@ -1,6 +1,6 @@
 <!-- Created by DrakesWeb to Stuffy -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" style="overflow: visible;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="shortcut icon" href="/src/logo.ico" type="image/x-icon">
 </head>
-<body>
-    <div class="screen">
-        <header>
+<body style="overflow: visible;">
+    <div class="screen" style="overflow: visible;">
+        <header class="space">
             <a href="/index.html">
                 <h1 class="roboto">Stuffy<span class="orange-color segoe">.</span></h1>
             </a>
             <a href="/pages/contact.html"><h3 class="contact-us">Contact us</h3></a>
         </header>
+        <div class="content_container" id="contents">
+        </div>
     </div>
+    <script src="/script.js"></script>
 </body>
 </html>
