Alpha version of Galleries. pre-Final project

--- a/pages/gallery_stills.html
+++ b/pages/gallery_stills.html
@@ -16,7 +16,7 @@
             </a>
             <a href="/pages/contact.html"><h3 class="contact-us">Contact us</h3></a>
         </header>
-        <div class="content_container" id="contents">
+        <div class="content_container" id="contents-s">
         </div>
     </div>
     <script src="/script.js"></script>
