Add second person on contact page.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,14 +14,16 @@
                 <h1 class="roboto">Stuffy<span class="segoe orange-color">.</span></h1>
             </a>
         </header>
-        <div class="left-circle circle border-no"><img src="/src/person_orange.webp" width="100%"></div>
+        <div class="left-circle circle"><img src="/src/person_orange.webp" width="100%"></div>
         <div class="content">
             <div class="email-container">
-                <h2>hello@stuffy<span class="orange-color segoe">.</span>design</h2>
+                <a href="mailto:hello@stuffy.design" class="contact_email">
+                    <h2>hello@stuffy<span class="orange-color segoe">.</span>design</h2>
+                </a>
                 <div class="social">
-                    <a href="https://discord.com/users/680713755772190730"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="72.358" height="56.012" viewBox="828 572 72.358 56.012"><g data-name="discord-icon-svgrepo-com"><path d="M889.294 576.691A58.933 58.933 0 0 0 874.366 572a43.81 43.81 0 0 0-1.912 3.97c-5.566-.837-11.08-.837-16.544 0a42.44 42.44 0 0 0-1.935-3.97 58.736 58.736 0 0 0-14.94 4.703c-9.447 14.276-12.008 28.198-10.728 41.922 6.266 4.68 12.339 7.522 18.309 9.382a45.543 45.543 0 0 0 3.921-6.458 38.545 38.545 0 0 1-6.175-3.006 30.678 30.678 0 0 0 1.514-1.197c11.906 5.569 24.842 5.569 36.606 0a37.04 37.04 0 0 0 1.514 1.197 38.444 38.444 0 0 1-6.186 3.011 45.317 45.317 0 0 0 3.92 6.458c5.977-1.86 12.055-4.702 18.32-9.387 1.503-15.91-2.566-29.704-10.756-41.934Zm-37.135 33.494c-3.574 0-6.505-3.337-6.505-7.4 0-4.063 2.869-7.406 6.505-7.406 3.637 0 6.568 3.337 6.505 7.406.006 4.063-2.868 7.4-6.505 7.4Zm24.04 0c-3.574 0-6.505-3.337-6.505-7.4 0-4.063 2.868-7.406 6.505-7.406s6.568 3.337 6.505 7.406c0 4.063-2.868 7.4-6.505 7.4Z" fill="#fff" fill-rule="evenodd" data-name="Path 1"/></g>
+                    <a class="social_icon" href="https://discord.com/users/680713755772190730"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="72.358" height="56.012" viewBox="828 572 72.358 56.012"><g data-name="discord-icon-svgrepo-com"><path d="M889.294 576.691A58.933 58.933 0 0 0 874.366 572a43.81 43.81 0 0 0-1.912 3.97c-5.566-.837-11.08-.837-16.544 0a42.44 42.44 0 0 0-1.935-3.97 58.736 58.736 0 0 0-14.94 4.703c-9.447 14.276-12.008 28.198-10.728 41.922 6.266 4.68 12.339 7.522 18.309 9.382a45.543 45.543 0 0 0 3.921-6.458 38.545 38.545 0 0 1-6.175-3.006 30.678 30.678 0 0 0 1.514-1.197c11.906 5.569 24.842 5.569 36.606 0a37.04 37.04 0 0 0 1.514 1.197 38.444 38.444 0 0 1-6.186 3.011 45.317 45.317 0 0 0 3.92 6.458c5.977-1.86 12.055-4.702 18.32-9.387 1.503-15.91-2.566-29.704-10.756-41.934Zm-37.135 33.494c-3.574 0-6.505-3.337-6.505-7.4 0-4.063 2.869-7.406 6.505-7.406 3.637 0 6.568 3.337 6.505 7.406.006 4.063-2.868 7.4-6.505 7.4Zm24.04 0c-3.574 0-6.505-3.337-6.505-7.4 0-4.063 2.868-7.406 6.505-7.406s6.568 3.337 6.505 7.406c0 4.063-2.868 7.4-6.505 7.4Z" class="fill" fill-rule="evenodd" data-name="Path 1"/></g>
                     </svg></a>
-                    <a href="https://www.instagram.com/stuffydesign"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="58.964" height="58.964" viewBox="0 0 58.964 58.964"><g id="insta-svgrepo-com" transform="translate(4 4)"><path id="Path_2" data-name="Path 2" d="M3,25.651C3,14.973,3,9.634,6.317,6.317S14.973,3,25.651,3h5.663C41.991,3,47.33,3,50.647,6.317s3.317,8.656,3.317,19.334v5.663c0,10.678,0,16.017-3.317,19.334s-8.656,3.317-19.334,3.317H25.651c-10.678,0-16.016,0-19.334-3.317S3,41.991,3,31.313Z" transform="translate(-3 -3)" fill="none" stroke="#fff" stroke-width="8"/><ellipse id="Ellipse_1" data-name="Ellipse 1" cx="4.109" cy="4.451" rx="4.109" ry="4.451" transform="translate(34.24 8.218)" fill="#fff"/><circle id="Ellipse_2" data-name="Ellipse 2" cx="8.56" cy="8.56" r="8.56" transform="translate(17.12 17.12)" fill="none" stroke="#fff" stroke-width="8"/></g>
+                    <a class="social_icon" href="https://www.instagram.com/stuffydesign"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="58.964" height="58.964" viewBox="0 0 58.964 58.964"><g id="insta-svgrepo-com" transform="translate(4 4)"><path id="Path_2" data-name="Path 2" d="M3,25.651C3,14.973,3,9.634,6.317,6.317S14.973,3,25.651,3h5.663C41.991,3,47.33,3,50.647,6.317s3.317,8.656,3.317,19.334v5.663c0,10.678,0,16.017-3.317,19.334s-8.656,3.317-19.334,3.317H25.651c-10.678,0-16.016,0-19.334-3.317S3,41.991,3,31.313Z" transform="translate(-3 -3)" fill="none" class="stroke" stroke-width="8"/><ellipse id="Ellipse_1" data-name="Ellipse 1" cx="4.109" cy="4.451" rx="4.109" ry="4.451" transform="translate(34.24 8.218)" class="fill"/><circle id="Ellipse_2" data-name="Ellipse 2" cx="8.56" cy="8.56" r="8.56" transform="translate(17.12 17.12)" fill="none" class="stroke" stroke-width="8"/></g>
                       </svg></a>
                 </div>
             </div>
@@ -43,14 +45,14 @@
                         <h3>MoGraph Artist <span class="orange-color">/</span> 2D Designer</h3>
                     </div>
                     <div class="person-info">
-                        <h3>Turin (Italy)</h3>
-                        <h3>Phone Number</h3>
-                        <h3>Email</h3>
+                        <h3>Anstruther (UK)</h3>
+                        <h3>+39 345 438 9255</h3>
+                        <h3>Jean.pavao@gmail.com</h3>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="right-circle circle"></div>
+        <div class="right-circle circle"><img src="/src/person_orange2.webp"></div>
     </div>
 </body>
 </html>
