Fix text problem on contact page. feat by Stuffy

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
                 <div class="right-person">
                     <div class="person-name">
                         <h3 class="bold">Jean Capuano</h3>
-                        <h3>MoGraph Artist <span class="orange-color">/</span> 2D Designer</h3>
+                        <h3>MoGraph <span class="orange-color">/</span> 2D Designer</h3>
                     </div>
                     <div class="person-info">
                         <h3>Anstruther (UK)</h3>
