--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,7 @@
                 <div class="left-person">
                     <div class="person-name">
                         <h3 class="bold">Giorgio Dessì</h3>
-                        <h3>3D Artist <span class="orange-color">/</span> Digital Designer</h3>
+                        <h3>3D Artist <span class="orange-color">/</span> Designer</h3>
                     </div>
                     <div class="person-info">
                         <h3>Turin (Italy)</h3>
